<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="428dp"
    android:layout_height="926dp"
    tools:context=".MainActivity"
    android:background="@color/grey_FitnessApp">

    <View
        android:layout_width="416dp"
        android:layout_height="125dp"
        android:background="@drawable/rectangle_rounded_white"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="76dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="416dp"
        android:layout_height="64dp"
        android:background="@drawable/rectangle_rounded_white"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="212dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="416dp"
        android:layout_height="64dp"
        android:background="@drawable/rectangle_rounded_white"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="287dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="416dp"
        android:layout_height="125dp"
        android:background="@drawable/rectangle_rounded_white"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="362dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="416dp"
        android:layout_height="64dp"
        android:background="@drawable/rectangle_rounded_white"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="498dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="416dp"
        android:layout_height="125dp"
        android:background="@drawable/rectangle_rounded_white"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="573dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:layout_width="122dp"
        android:layout_height="27dp"
        android:text="@string/fintessapp"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="34dp" />

    <TextView
        android:layout_width="122dp"
        android:layout_height="27dp"
        android:text="@string/menu1"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:layout_width="122dp"
        android:layout_height="27dp"
        android:text="@string/menu2"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:layout_width="303dp"
        android:layout_height="30dp"
        android:text="@string/menu3"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="227dp" />

    <TextView
        android:layout_width="311dp"
        android:layout_height="27dp"
        android:text="@string/menu4"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="306dp" />

    <TextView
        android:layout_width="44dp"
        android:layout_height="26dp"
        android:text="@string/menu5"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="374dp" />
    <TextView
        android:layout_width="157dp"
        android:layout_height="26dp"
        android:text="@string/menu6"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="424dp" />

    <TextView
        android:layout_width="277dp"
        android:layout_height="28dp"
        android:text="@string/menu7"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="516dp" />

    <TextView
        android:layout_width="204dp"
        android:layout_height="26dp"
        android:text="@string/menu8"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="583dp" />

    <TextView
        android:layout_width="112dp"
        android:layout_height="26dp"
        android:text="@string/menu9"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="622dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/shoe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="344dp"
        android:layout_marginTop="220dp"
        android:src="@drawable/sport"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="344dp"
        android:layout_marginTop="299dp"
        android:src="@drawable/weather"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="370dp"
        android:src="@drawable/sleep"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="344dp"
        android:layout_marginTop="510dp"
        android:src="@drawable/notes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="241dp"
        android:layout_marginTop="577dp"
        android:src="@drawable/kcal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="200dp"
        android:layout_height="8dp"
        android:background="@drawable/rectangle_rounded_white"
        android:backgroundTint="@color/lines"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="148dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="200dp"
        android:layout_height="8dp"
        android:background="@drawable/rectangle_rounded_white"
        android:backgroundTint="@color/lines"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="438dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="200dp"
        android:layout_height="8dp"
        android:background="@drawable/rectangle_rounded_white"
        android:backgroundTint="@color/lines"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="638dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="22dp"
        android:layout_height="8dp"
        android:background="@drawable/rectangle_rounded_left"
        android:backgroundTint="@color/green"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="148dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="167dp"
        android:layout_height="8dp"
        android:background="@drawable/rectangle_rounded_left"
        android:backgroundTint="@color/violet"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="438dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="55dp"
        android:layout_height="8dp"
        android:background="@drawable/rectangle_rounded_left"
        android:backgroundTint="@color/orange"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="638dp"
        tools:ignore="MissingConstraints"/>




</androidx.constraintlayout.widget.ConstraintLayout>