<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="428dp"
    android:layout_height="926dp"
    tools:context=".MainActivity"
    android:background="@color/grey_FitnessApp">

    <View
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:background="@drawable/rectangle_rounded_white"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="28dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/return_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:text="@string/date_weather"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textSize="36sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:layout_width="202dp"
        android:layout_height="48dp"
        android:text="@string/city_weather"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:textSize="36sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="136dp" />

    <View
        android:layout_width="354dp"
        android:layout_height="354dp"
        android:background="@drawable/circle"
        android:backgroundTint="#14BBF0"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="195dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="224dp"
        android:src="@drawable/weather_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:text="@string/temperature_weather"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textSize="48sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="372dp" />

    <TextView
        android:layout_width="203dp"
        android:layout_height="32dp"
        android:text="@string/description_weather"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="446dp" />

</androidx.constraintlayout.widget.ConstraintLayout>