<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="428dp"
    android:layout_height="926dp"
    tools:context=".MainActivity"
    android:background="@color/grey_FitnessApp">

    <View
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:background="@drawable/rectangle_rounded_white"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="28dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/return_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="394dp"
        android:layout_height="336dp"
        android:background="@drawable/rectangle_rounded_white"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="80dp"
        tools:ignore="MissingConstraints"/>

    <View
        android:layout_width="394dp"
        android:layout_height="336dp"
        android:background="@drawable/rectangle_rounded_white"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="437dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:layout_width="202dp"
        android:layout_height="41dp"
        android:text="@string/add_note"
        android:textColor="#99000000"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="95dp" />

    <TextView
        android:layout_width="202dp"
        android:layout_height="41dp"
        android:text="@string/note_1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="461dp" />

    <TextView
        android:layout_width="330dp"
        android:layout_height="111dp"
        android:text="@string/note_2"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="504dp" />

</androidx.constraintlayout.widget.ConstraintLayout>